Agregado tiempo estimado de retiro y bosquejo de JSON de orden para cocinero

--- a/ABMODELE/Views/Productos/Delete.cshtml
+++ b/ABMODELE/Views/Productos/Delete.cshtml
@@ -36,11 +36,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.FechaPreparacion)
+            @Html.DisplayNameFor(model => model.tiempoPreparacion)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.FechaPreparacion)
+            @Html.DisplayFor(model => model.tiempoPreparacion)
         </dd>
 
     </dl>
