--- a/ABMODELE/Views/Productos/Details.cshtml
+++ b/ABMODELE/Views/Productos/Details.cshtml
@@ -35,12 +35,13 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.FechaPreparacion)
+            @Html.DisplayNameFor(model => model.tiempoPreparacion)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.FechaPreparacion)
+            @Html.DisplayFor(model => model.tiempoPreparacion)
         </dd>
+
 
     </dl>
 </div>
