--- a/ABMODELE/Views/Productos/Edit.cshtml
+++ b/ABMODELE/Views/Productos/Edit.cshtml
@@ -44,10 +44,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.FechaPreparacion, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.tiempoPreparacion, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.FechaPreparacion, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.FechaPreparacion, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.tiempoPreparacion, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.tiempoPreparacion, "", new { @class = "text-danger" })
             </div>
         </div>
 
