Cambios en la base de datos, cambios en la vista de Manage y en el ManageViewModel

--- a/ABMODELE/Views/Manage/Index.cshtml
+++ b/ABMODELE/Views/Manage/Index.cshtml
@@ -7,6 +7,12 @@
 
 <p class="text-success">@ViewBag.StatusMessage</p>
 <div>
+    <h4>Información de la cuenta</h4>
+    <hr />
+    <dl class="dl-horizontal">
+        <dt>Saldo:</dt> <dd>@Model.Saldo</dd>
+
+    </dl>
     <h4>Cambiar la configuración de la cuenta</h4>
     <hr />
     <dl class="dl-horizontal">
