Ahora existen los productos no preparables, enlace bien hecho

--- a/ABMODELE/Views/Productos/Index.cshtml
+++ b/ABMODELE/Views/Productos/Index.cshtml
@@ -24,7 +24,7 @@
             @Html.DisplayNameFor(model => model.ConJuna)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.tiempoPreparacion)
+            @Html.DisplayNameFor(model => model.TiempoPreparacion)
         </th>
         <th></th>
     </tr>
@@ -41,7 +41,7 @@
             @Html.DisplayFor(modelItem => item.ConJuna)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.tiempoPreparacion)
+            @Html.DisplayFor(modelItem => item.TiempoPreparacion)
         </td>
         <td>
             @if (User.IsInRole("administrador"))
