--- a/ABMODELE/Views/Productos/Create.cshtml
+++ b/ABMODELE/Views/Productos/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model ABMODELE.Models.Producto
+﻿@model ABMODELE.Models.ViewModel.CreateProductoViewModel
 
 @{
     ViewBag.Title = "Create";
@@ -16,41 +16,50 @@
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
-        @Html.LabelFor(model => model.Nombre, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.Producto.Nombre, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
+            @Html.EditorFor(model => model.Producto.Nombre, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Producto.Nombre, "", new { @class = "text-danger" })
         </div>
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.Precio, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.Producto.Precio, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.Precio, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Precio, "", new { @class = "text-danger" })
+            @Html.EditorFor(model => model.Producto.Precio, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Producto.Precio, "", new { @class = "text-danger" })
         </div>
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.ConJuna, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.Producto.ConJuna, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             <div class="checkbox">
-                @Html.EditorFor(model => model.ConJuna)
-                @Html.ValidationMessageFor(model => model.ConJuna, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Producto.ConJuna)
+                @Html.ValidationMessageFor(model => model.Producto.ConJuna, "", new { @class = "text-danger" })
             </div>
         </div>
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.tiempoPreparacion, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.Producto.TiempoPreparacion, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             <div class="checkbox">
-                @Html.EditorFor(model => model.tiempoPreparacion)
-                @Html.ValidationMessageFor(model => model.tiempoPreparacion, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Producto.TiempoPreparacion)
+                @Html.ValidationMessageFor(model => model.Producto.TiempoPreparacion, "", new { @class = "text-danger" })
             </div>
         </div>
     </div>
 
+    <div class="form-group">
+        @Html.LabelFor(model => model.Producto.Tipo, htmlAttributes: new { @class = "control-label col-md-2" });
+        <div class="col-md-10">
+            <div class="dropdown">
+                @Html.DropDownListFor(model => model.Producto.Tipo, Model.TiposProducto);
+            </div>
+        </div>
+        
+    </div>
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
