Arreglado nombres de productos en carro, Ahora el subtotal de la orden es 0 si la cuenta iniciada es un administrador

--- a/ABMODELE/Views/Productos/Index.cshtml
+++ b/ABMODELE/Views/Productos/Index.cshtml
@@ -65,7 +65,19 @@
             type: "POST",
             url: "/Carrito/AgregarProducto",
             content: "application/json; charset=utf-8",
-            dataType: "json"//,
+            dataType: "json",
+            data: {
+                'idProducto': idProducto
+            },
+            success: function (response) {
+                if (response.success)
+                    alert("Producto Agregado");
+                else
+                    alert("Error: " + response.responseText);
+            },
+            error: function (response) {
+                alert("Errrorrrr: " + response.responseText);
+            }
             
         });
     }
