--- a/ABMODELE/Views/Ordens/PagarCarro.cshtml
+++ b/ABMODELE/Views/Ordens/PagarCarro.cshtml
@@ -48,15 +48,24 @@
         </div>
     </div>
 
+    <div class="form-group">
+        @Html.LabelFor(model => model.orden.Comentario, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.orden.Comentario, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.orden.Monto, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
     <h4>Productos</h4>
     <hr />
 
-    @foreach (var item in Model.productoPersonalizado)
+
+   @foreach (var item in Model.productoPersonalizado)
     {
         <div><b>Producto: </b> @item.Producto.Nombre</div>
         <hr />
     }
-    
+
 
     <div class="form-group">
         @Html.LabelFor(model => model.orden.MetodoPago, htmlAttributes: new { @class = "control-label col-md-2" });
@@ -69,7 +78,7 @@
     </div>
 
 
-  
+
 
 
     <div class="form-group">
