--- a/ABMODELE/Views/Productos/Details.cshtml
+++ b/ABMODELE/Views/Productos/Details.cshtml
@@ -35,17 +35,50 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.tiempoPreparacion)
+            @Html.DisplayNameFor(model => model.TiempoPreparacion)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.tiempoPreparacion)
+            @Html.DisplayFor(model => model.TiempoPreparacion)
         </dd>
 
+        <dt>
+            <input type="number" name="cantidad" id="cantidad" value="1"/>
+        </dt>
+        <dd>
+            <a href="#" onclick="agregarAlCarrito(@Model.ProductoId)">Agregar al Carro</a>
+        </dd>
+        
 
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ProductoId }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Volver", "Index")
 </p>
+
+
+<script>
+    function agregarAlCarrito(idProducto) {
+        alert(document.getElementById("cantidad").value);
+        $.ajax({
+            type: "POST",
+            url: "/Carrito/AgregarProducto",
+            content: "application/json; charset=utf-8",
+            dataType: "json",
+            data: {
+                'idProducto': idProducto,
+                'cantidad': document.getElementById("cantidad").value
+            },
+            success: function (response) {
+                if (response.success)
+                    alert("Producto Agregado");
+                else
+                    alert("Error: " + response.responseText);
+            },
+            error: function (response) {
+                alert("Errrorrrr: " + response.responseText);
+            }
+
+        });
+    }
+</script>
