Agregado apartado Destacado, modo de llegar a las categorias desde el home

--- a/ABMODELE/Views/Home/Index.cshtml
+++ b/ABMODELE/Views/Home/Index.cshtml
@@ -1,8 +1,13 @@
-﻿@{
+﻿@model ABMODELE.Models.ViewModel.HomeViewModel
+
+@{
     ViewBag.Title = "CafetApp";
 }
 
-<div class="jumbotron">
-    <h1>ESKEREEEEE</h1>
-    <p>Eskere 123</p>
-</div>
+
+<ul>
+    @foreach (var categoria in Model.categorias)
+    {
+        <li>@Html.ActionLink(categoria.nombre, "Browse","Productos",    new { categorias = categoria.nombre }, "")</li>
+    }
+</ul>
