--- a/ABMODELE/Views/Productos/Delete.cshtml
+++ b/ABMODELE/Views/Productos/Delete.cshtml
@@ -34,13 +34,20 @@
         <dd>
             @Html.DisplayFor(model => model.ConJuna)
         </dd>
-
         <dt>
-            @Html.DisplayNameFor(model => model.tiempoPreparacion)
+            @Html.DisplayNameFor(model => model.Destacado)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.tiempoPreparacion)
+            @Html.DisplayFor(model => model.ConJuna)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.TiempoPreparacion)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.TiempoPreparacion)
         </dd>
 
     </dl>
