--- a/ABMODELE/Views/Productos/Details.cshtml
+++ b/ABMODELE/Views/Productos/Details.cshtml
@@ -34,6 +34,18 @@
             @Html.DisplayFor(model => model.ConJuna)
         </dd>
 
+        @if (User.IsInRole("administrador"))
+        {
+
+            <dt>
+                @Html.DisplayNameFor(model => model.Destacado)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.Destacado)
+            </dd>
+        }
+
         <dt>
             @Html.DisplayNameFor(model => model.TiempoPreparacion)
         </dt>
@@ -43,12 +55,12 @@
         </dd>
 
         <dt>
-            <input type="number" name="cantidad" id="cantidad" value="1"/>
+            <input type="number" name="cantidad" id="cantidad" value="1" />
         </dt>
         <dd>
             <a href="#" onclick="agregarAlCarrito(@Model.ProductoId)">Agregar al Carro</a>
         </dd>
-        
+
 
     </dl>
 </div>
