--- a/ABMODELE/Views/Productos/Create.cshtml
+++ b/ABMODELE/Views/Productos/Create.cshtml
@@ -41,6 +41,18 @@
         </div>
     </div>
 
+
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.Producto.Destacado, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            <div class="checkbox">
+                @Html.EditorFor(model => model.Producto.Destacado)
+                @Html.ValidationMessageFor(model => model.Producto.ConJuna, "", new { @class = "text-danger" })
+            </div>
+        </div>
+    </div>
+
     <div class="form-group">
         @Html.LabelFor(model => model.Producto.TiempoPreparacion, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
