--- a/ABMODELE/Views/Productos/Edit.cshtml
+++ b/ABMODELE/Views/Productos/Edit.cshtml
@@ -42,12 +42,22 @@
                 </div>
             </div>
         </div>
+        
+        <div class="form-group">
+            @Html.LabelFor(model => model.Destacado, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <div class="checkbox">
+                    @Html.EditorFor(model => model.Destacado)
+                    @Html.ValidationMessageFor(model => model.Destacado, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.tiempoPreparacion, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.TiempoPreparacion, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.tiempoPreparacion, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.tiempoPreparacion, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.TiempoPreparacion, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.TiempoPreparacion, "", new { @class = "text-danger" })
             </div>
         </div>
 
