Agregado apartado de destacados (otra vez) y productos destacados en el index. Agregado que los cocineros puedan marcar como entregado una orden.

--- a/ABMODELE/Views/Home/Index.cshtml
+++ b/ABMODELE/Views/Home/Index.cshtml
@@ -11,3 +11,11 @@
         <li>@Html.ActionLink(categoria.nombre, "Browse","Productos",    new { categorias = categoria.nombre }, "")</li>
     }
 </ul>
+
+<ul>
+    @foreach ( var producto in Model.productos)
+    {
+        <li>@Html.ActionLink(producto.Nombre + " " + producto.Precio, "Details", "Productos", new { id = producto.ProductoId }, "")</li>
+    }
+
+</ul>
