--- a/ABMODELE/Views/Shared/_Layout.cshtml
+++ b/ABMODELE/Views/Shared/_Layout.cshtml
@@ -64,7 +64,7 @@
     </div>
 
 
-    <div class="well navbar-fixed-bottom" style="background-color:#222222;color:wheat">
+    <div class="well navbar-bottom" style="background-color:#222222;color:wheat">
 
         <div class="col-lg-4" style="margin-left:20px">
 
